fix the map white space

--- a/css/redesigned_style.css
+++ b/css/redesigned_style.css
@@ -23,7 +23,7 @@ body {
 }
 
 .control-panel {
-    height: 100vh;
+    height: 92vh;
     /* background-color: #f5f5dc; */
     background-color:var(--background-1);
     /* background-color: #; */
